--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<app-header></app-header>
+<div class="container">
 <h1>
   {{title}}
 </h1>
+</div>
+<!--<div class="container">
+  <h2>Basic Modal Example</h2>
+  <button type="button" class="btn btn-info btn-lg">Open Modal</button>
+  </div>
+-->
