--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,3 @@
-.modal-dialog {
-}
-
 input{
   min-height: 40px;
 }
@@ -47,17 +44,17 @@ a{
 
 #snackbarRegister.show, #snackbarLogin, #snackbarLogout {
   visibility: visible;
-  -webkit-animation: fadein .5s, fadeout 1s 2s;
-  animation: fadein .5s, fadeout 1s 2s;
+  -webkit-animation: fadein .5s, fadeout .5s 2.5s;
+  animation: fadein .5s, fadeout .5s 2.5s;
 }
 
 @-webkit-keyframes fadein {
-  from {top: 0px; opacity: 0;}
+  from {top: -15px; opacity: 0;}
   to {top: 0px; opacity: 1;}
 }
 
 @keyframes fadein {
-  from {top: 0px; opacity: 0;}
+  from {top: -15px; opacity: 0;}
   to {top: 0px; opacity: 1;}
 }
 
