--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,8 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <img style="position: absolute; top: 11px;" src="assets/logos/logo-small.png">
+      <a class="navbar-brand">
+        <img style="position: absolute; top: 11px; border-radius: 3px;" src="assets/logos/logo-small.png">
       </a>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -13,23 +13,23 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a style="margin-left: 20px; color: white; font-size: 18px;" class="navbar-brand" href="#">Defio</a>
+      <a style="margin-left: 20px; color: white; font-size: 18px;" class="navbar-brand">Defio</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active" style="font-size: 16px;"><a>  Home  </a></li>
-        <li><a  style="font-size: 16px;">  Desafios  </a></li>
+        <li routerLink="home" routerLinkActive="active" style="font-size: 16px;"><a>  Home  </a></li>
+        <li routerLink="desafios"  routerLinkActive="active"><a  style="font-size: 16px;">  Desafios  </a></li>
 
         <li class="dropdown">
-          <a href="#"  style="font-size: 16px;" class="dropdown-toggle"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">  Mais  <span style="margin-left: 10px;" class="caret"></span></a>
+          <a style="font-size: 16px;" class="dropdown-toggle"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">  Mais  <span style="margin-left: 10px;" class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Eventos</a></li>
+            <li><a>Eventos</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Fale conosco</a></li>
+            <li><a>Fale conosco</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Sobre o Defio</a></li>
+            <li><a>Sobre o Defio</a></li>
           </ul>
         </li>
       </ul>
@@ -40,19 +40,19 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right" style="position: relative">
-        <li *ngIf="!finishedRS"><a style="font-size: 16px;" href="#" data-toggle="modal" data-target="#myModal">Acessar</a></li>
-        <li *ngIf="!finishedRS"><a style="font-size: 16px;" href="#" data-toggle="modal" data-target="#myModal2">Cadastre-se</a></li>
+        <li *ngIf="!finishedRS"><a style="font-size: 16px;" data-toggle="modal" data-target="#myModal">Acessar</a></li>
+        <li *ngIf="!finishedRS"><a style="font-size: 16px;" data-toggle="modal" data-target="#myModal2">Cadastre-se</a></li>
         <li *ngIf="finishedRS" class="dropdown">
           <a id="dropAcc"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <div style="margin-left: 40px; font-size: 16px;">{{user?.nome}}</div>
             <span style="margin-left: 10px;" class="caret"></span>
             <img class="circle-image" style="max-height: 32px; max-width: 32px; position: absolute" src="{{user?.image}}">
           </a>
-          <ul class="dropdown-menu" style="width: 100%">
-            <li><a href="#">Minha conta</a></li>
+          <ul class="dropdown-menu" style="width: 110%">
+            <li><a>Minha conta</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Meus desafios</a></li>
-            <li><a href="#">Mensagens (3)</a></li>
+            <li><a>Meus desafios</a></li>
+            <li><a>Mensagens (3)</a></li>
             <li role="separator" class="divider"></li>
             <li><a (click)="logout()">Sair</a></li>
           </ul>
