--- a/src/app/desafios/desafios.component.html
+++ b/src/app/desafios/desafios.component.html
@@ -1,3 +1,72 @@
-<p>
-  desafios works!
-</p>
+<!--<div class="container">
+  <tr *ngFor="let desafio of desafios">
+    <div>{{desafio.titulo}}</div>
+  </tr>
+</div>
+
+-->
+<div class="container">
+  <nav *ngIf="r" aria-label="Page navigation">
+    <ul class="pagination">
+      <li style="cursor: pointer">
+        <a (click)="previous()" aria-label="Previous">
+          <span style="margin-right: 5px;" aria-hidden="true">&laquo;</span>Anterior
+        </a>
+      </li>
+      <li style="cursor: pointer" (click)="next()">
+        <a aria-label="Next">Próxima
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+  <div *ngFor="let desafio of desafios">
+  <div class="card card-inverse" style="border-radius:7px;">
+    <div class="card-block" style="position:relative;color: #1e1e1e; padding: 10px;">
+      <td><img style="max-width: 120px; margin-right: 10px;" src="{{desafio.logoEmpresa}}"></td>
+      <td valign="top">
+      <div style="font-size: 20px;">{{desafio.titulo}}</div>
+      <p class="card-text">{{desafio.subTitulo}}</p>
+        <table style="width:100%;">
+          <tr>
+            <th>Prêmio</th>
+            <th>Inscrições até</th>
+          </tr>
+          <tr>
+            <td valign="bottom">{{desafio.premio}}</td>
+            <td valign="bottom">{{desafio.dtTermino}}</td>
+          </tr>
+        </table>
+      </td>
+        <a style="position: absolute; bottom: 10px; right: 10px;" class="btn btn-primary">Ver mais</a>
+    </div>
+  </div>
+    <br>
+  </div>
+</div>
+<br>
+<br>
+<br>
+<!--
+<section>
+  <div class="container py-3">
+    <div class="card">
+      <div class="row ">
+        <div class="col-md-4">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97400&w=300&h=300" class="w-100">
+        </div>
+        <div class="col-md-8 px-3">
+          <div class="card-block px-3">
+            <h4 class="card-title">Lorem ipsum dolor sit amet</h4>
+            <p class="card-text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="#" class="btn btn-primary">Read More</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+-->
