--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,82 @@
-<p>
-  home works!
-</p>
+<div class="container">
+
+  <!-------------------------->
+  <div style="margin-left: 15px; margin-right: 15px; margin-bottom: 25px; margin-top: 5px;" id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="assets/defioSlogan.png" alt="Los Angeles" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="assets/defioSlogan.png" alt="Chicago" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="assets/defioSlogan.png" alt="New york" style="width:100%;">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <!-------------------------->
+
+  <div>
+  <!--First project-->
+  <div class="col-md-6 m-b-2" style="padding-bottom: 15px">
+    <!--Card-->
+    <div class="card-overlay" style="background-image: url('https://mdbootstrap.com/img/Photos/Exposure/Dark/courses.jpg')">
+
+      <!--Content-->
+      <div class="white-text text-center" style="padding: 20px;">
+        <div class="card-block">
+          <h5 style="color:#009b7d;" class="teal-text"><i class="fa fa-pie-chart"></i> Marketing</h5>
+          <h3>Project title</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem, optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui, dolorum!.</p>
+          <!--<a class="btn btn-lg btn-outline-white waves-effect waves-light"><i class="fa fa-clone left"></i> View project</a>-->
+          <a class="btn btn-success btn-outline" style="border-color:#009b7d;">View Project</a>
+        </div>
+      </div>
+    </div>
+    <!--/.Card-->
+  </div>
+  <!--/First project-->
+
+  <!--Second project-->
+  <div class="col-md-6 m-b-2">
+    <!--Card-->
+    <div class="card-overlay" style="background-image: url('https://mdbootstrap.com/img/Photos/Exposure/Dark/university.jpg')">
+
+      <!--Content-->
+      <div class="white-text text-center" style="padding: 20px;">
+        <div class="card-block">
+          <h5 style="color: #00799b" class="cyan-text"><i class="fa fa-desktop"></i> Software</h5>
+          <h3>Project title</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem, optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui, dolorum!.</p>
+          <!--<a class="btn btn-lg btn-outline-white waves-effect waves-light"><i class="fa fa-clone left"></i> View project</a>-->
+          <a class="btn btn-primary btn-outline" style="border-color: #00799b">View Project</a>
+        </div>
+      </div>
+    </div>
+    <!--/.Card-->
+  </div>
+  <!--/Second project-->
+
+</div>
+</div>
+<br>
